addressed some spacing issues on the contact.html to make it more accurate to the provided images

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1,6 +1,15 @@
 body{
     background-image: url(../images/criss-cross.png);
 }
+.bodyContainer{
+    background-image: url(../images/plain-white-background.jpg);
+    margin-top: 20px;
+    max-width: 960px;
+    width: 100%;
+    position: absolute;
+    left: 10%;
+    padding: 10px;
+}
 * {
     box-sizing: border-box
 }
@@ -9,14 +18,4 @@ h1{
 }
 header{
     background: white;
-}
-.container{
-    max-width: 960px;
-    width: 100%;
-}
-.bodyContainer{
-    width: 100%;
-    max-width: 960px;
-    background: #ffffff;
-    margin-top: 20px;
 }
